--- a/Chemistry 1046/ch10.md
+++ b/Chemistry 1046/ch10.md
@@ -56,4 +56,41 @@ intermolecular forces
 - When a substance melts or boils the intermolecular forces are broken
 (not the covalent bonds).
 
-![Alt Text](./image1.png)
+![Alt Text](./ch10_images/image1.png)
+![](./ch10_images/image2.png)
+![](./ch10_images/image3.png)
+![](./ch10_images/image4.png)
+![](./ch10_images/image5.png)
+![](./ch10_images/image6.png)
+![](./ch10_images/image7.png)
+![](./ch10_images/image8.png)
+![](./ch10_images/image9.png)
+![](./ch10_images/image10.png)
+![](./ch10_images/image11.png)
+![](./ch10_images/image12.png)
+![](./ch10_images/image13.png)
+![](./ch10_images/image14.png)
+![](./ch10_images/image15.png)
+![](./ch10_images/image16.png)
+![](./ch10_images/image17.png)
+![](./ch10_images/image18.png)
+![](./ch10_images/image19.png)
+![](./ch10_images/image20.png)
+![](./ch10_images/image21.png)
+![](./ch10_images/image22.png)
+![](./ch10_images/image23.png)
+![](./ch10_images/image24.png)
+![](./ch10_images/image25.png)
+![](./ch10_images/image26.png)
+![](./ch10_images/image27.png)
+![](./ch10_images/image28.png)
+![](./ch10_images/image29.png)
+![](./ch10_images/image30.png)
+![](./ch10_images/image31.png)
+![](./ch10_images/image32.png)
+![](./ch10_images/image33.png)
+![](./ch10_images/image34.png)
+![](./ch10_images/image35.png)
+![](./ch10_images/image36.png)
+![](./ch10_images/image37.png)
+![](./ch10_images/image38.png)
